--- a/package.json
+++ b/package.json
@@ -35,14 +35,15 @@
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
     "formik": "^2.1.5",
+    "graphql": "^15.5.0",
     "history": "^5.0.0",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.1",
+    "react": "^16.8.6",
     "react-chartjs-2": "^2.10.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.8.6",
     "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
     "react-intl": "^5.13.2",
@@ -51,6 +52,7 @@
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^4.0.0",
     "typescript": "^4.2.3",
+    "urql": "^2.0.1",
     "uuid": "^8.3.0",
     "yup": "^0.29.3"
   },
