--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,6 +28,7 @@
     ]
   },
   "dependencies": {
+    "@graphql-codegen/typescript-urql": "^2.0.5",
     "@material-ui/core": "^4.11.0",
     "@material-ui/data-grid": "^4.0.0-alpha.22",
     "@material-ui/icons": "^4.9.1",
@@ -57,6 +59,12 @@
     "yup": "^0.29.3"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "1.21.3",
+    "@graphql-codegen/typescript": "^1.21.1",
+    "@graphql-codegen/typescript-document-nodes": "1.17.10",
+    "@graphql-codegen/typescript-graphql-files-modules": "1.18.1",
+    "@graphql-codegen/typescript-operations": "1.17.15",
+    "@graphql-codegen/urql-introspection": "1.0.0",
     "prettier": "^1.19.1"
   }
 }
