graphql code gen mutation

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "generate": "graphql-codegen --config codegen.yml"
+    "generate": "graphql-codegen --config codegen.yml",
+    "prestart": "yarn generate"
   },
   "eslintConfig": {
     "extends": "react-app"
