--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "start": "yarn generate && react-scripts start",
     "build": "yarn generate && react-scripts build",
+    "install": "yarn generate",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "generate": "graphql-codegen --config codegen.yml"
