--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "clsx": "^1.1.1",
     "formik": "^2.1.5",
     "graphql": "^15.5.0",
-    "graphql-tag: "^2.12.4",
+    "graphql-tag": "^2.12.4",
     "history": "^5.0.0",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
