--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-intl": "^5.13.2",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router": "^6.0.0-beta.0",
@@ -59,12 +60,12 @@
     "yup": "^0.29.3"
   },
   "devDependencies": {
-    "@graphql-codegen/typescript-urql": "^2.0.5",
     "@graphql-codegen/cli": "1.21.3",
     "@graphql-codegen/typescript": "^1.21.1",
     "@graphql-codegen/typescript-document-nodes": "1.17.10",
     "@graphql-codegen/typescript-graphql-files-modules": "1.18.1",
     "@graphql-codegen/typescript-operations": "1.17.15",
+    "@graphql-codegen/typescript-urql": "^2.0.5",
     "@graphql-codegen/urql-introspection": "1.0.0",
     "prettier": "^1.19.1"
   }
