--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     ]
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.6.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/data-grid": "^4.0.0-alpha.22",
     "@material-ui/icons": "^4.9.1",
@@ -41,6 +42,7 @@
     "history": "^5.0.0",
     "lodash": "^4.17.19",
     "moment": "^2.27.0",
+    "netlify-identity-widget": "^1.9.2",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -53,18 +55,19 @@
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "^6.0.0-beta.0",
     "react-scripts": "^4.0.0",
+    "react-use-auth": "^2.1.0-14",
     "typescript": "^4.2.3",
     "urql": "^2.0.1",
     "uuid": "^8.3.0",
     "yup": "^0.29.3"
   },
   "devDependencies": {
-    "@graphql-codegen/typescript-urql": "^2.0.5",
     "@graphql-codegen/cli": "1.21.3",
     "@graphql-codegen/typescript": "^1.21.1",
     "@graphql-codegen/typescript-document-nodes": "1.17.10",
     "@graphql-codegen/typescript-graphql-files-modules": "1.18.1",
     "@graphql-codegen/typescript-operations": "1.17.15",
+    "@graphql-codegen/typescript-urql": "^2.0.5",
     "@graphql-codegen/urql-introspection": "1.0.0",
     "prettier": "^1.19.1"
   }
