vite intergration, implicit graphql files, code cleaning, etc...

--- a/package.json
+++ b/package.json
@@ -1,71 +1,61 @@
 {
   "name": "react-material-dashboard",
-  "main": "src/index.tsx",
-  "author": "DeviasIO",
-  "licence": "MIT",
-  "version": "1.0.0",
-  "private": false,
+  "main": "src/main.tsx",
+  "version": "0.0.0",
   "scripts": {
-    "start": "yarn generate && react-scripts start",
-    "build": "yarn generate && react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "generate": "graphql-codegen --config codegen.yml"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "start": "yarn codegen && react-scripts start",
+    "dev": "concurrently \"vite\" \"npm run codegen:watch\"",
+    "build": "tsc && vite build",
+    "server": "vite preview",
+    "codegen:watch": "cross-env DOTENV_CONFIG_PATH=./.env.development graphql-codegen --require dotenv/config  --watch --config codegen.yml",
+    "codegen": "graphql-codegen --require dotenv/config --config codegen.yml"
   },
   "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@iteria-app/component-templates": "^1.0.0",
+    "@iteria-app/generator": "^1.0.0",
     "@material-ui/core": "^4.11.0",
-    "@material-ui/data-grid": "^4.0.0-alpha.22",
-    "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.56",
-    "@material-ui/styles": "^4.10.0",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.11.4",
+    "@mui/material": "^5.0.4",
+    "@mui/x-data-grid": "^5.1.0",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
-    "formik": "^2.1.5",
+    "formik": "^2.2.9",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.4",
-    "history": "^5.0.0",
-    "lodash": "^4.17.19",
-    "moment": "^2.27.0",
+    "history": "^5.2.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "nprogress": "^0.2.0",
-    "prop-types": "^15.7.2",
+    "prop-types": "^15.8.1",
     "react": "^17.0.1",
-    "react-chartjs-2": "^2.10.0",
-    "react-dom": "^16.13.1",
-    "react-feather": "^2.0.8",
+    "react-chartjs-2": "^2.11.2",
+    "react-dom": "^16.14.0",
+    "react-feather": "^2.0.9",
     "react-helmet": "^6.1.0",
     "react-intl": "^5.13.2",
     "react-perfect-scrollbar": "^1.5.8",
-    "react-router": "^6.0.0-beta.0",
-    "react-router-dom": "^6.0.0-beta.0",
-    "react-scripts": "^4.0.0",
-    "typescript": "^4.2.3",
+    "react-router": "^6.2.1",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "^4.0.3",
+    "typescript": "^4.3.2",
     "urql": "^2.0.1",
-    "uuid": "^8.3.0",
+    "uuid": "^8.3.2",
     "yup": "^0.29.3"
   },
   "devDependencies": {
-    "@graphql-codegen/typescript-urql": "^2.0.5",
-    "@graphql-codegen/cli": "1.21.3",
-    "@graphql-codegen/typescript": "^1.21.1",
-    "@graphql-codegen/typescript-document-nodes": "1.17.10",
-    "@graphql-codegen/typescript-graphql-files-modules": "1.18.1",
-    "@graphql-codegen/typescript-operations": "1.17.15",
-    "@graphql-codegen/urql-introspection": "1.0.0",
-    "prettier": "^1.19.1"
+    "@graphql-codegen/cli": "^2.2.0",
+    "@graphql-codegen/typescript": "^2.2.2",
+    "@graphql-codegen/typescript-operations": "^2.1.5",
+    "@graphql-codegen/typescript-urql": "^3.2.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@vitejs/plugin-react": "^1.1.0",
+    "concurrently": "^6.4.0",
+    "cross-env": "^7.0.3",
+    "vite": "^2.6.4"
   }
 }
