--- a/codegen.yml
+++ b/codegen.yml
@@ -1,9 +1,12 @@
 overwrite: true
-schema: 'https://iteria-app-example01.herokuapp.com/v1/graphql'
-documents: 'src/**/*.graphql'
+schema: ${VITE_HASURA_GRAPHQL_ENDPOINT}
+documents: './src/pages/**/*.graphql'
 generates:
   src/generated/graphql.ts:
     plugins:
       - typescript
       - typescript-operations
       - typescript-urql
+  src/generated/introspect.json:
+    plugins:
+      - introspection
