mui versions, minor changes

--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
     "@emotion/styled": "^11.3.0",
     "@iteria-app/component-templates": "^1.0.0",
     "@iteria-app/generator": "^1.0.0",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
-    "@material-ui/styles": "^4.11.4",
-    "@mui/material": "^5.0.4",
-    "@mui/x-data-grid": "^5.1.0",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/material": "^5.2.7",
+    "@mui/styles": "^5.2.3",
+    "@mui/x-data-grid": "^5.2.2",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
     "formik": "^2.2.9",
