--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@iteria-app/component-templates": "^1.0.0",
-    "@iteria-app/generator": "^1.0.0",
+    "@iteria-app/component-templates": "^1.0.1",
+    "@iteria-app/generator": "^1.0.2",
+    "@iteria-app/graphql-lowcode": "^0.2.2",
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.64",
     "@mui/material": "^5.2.7",
@@ -39,7 +40,7 @@
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^4.0.3",
-    "typescript": "^4.3.2",
+    "typescript": "4.5.4",
     "urql": "^2.0.1",
     "uuid": "^8.3.2",
     "yup": "^0.29.3"
@@ -55,6 +56,6 @@
     "@vitejs/plugin-react": "^1.1.0",
     "concurrently": "^6.4.0",
     "cross-env": "^7.0.3",
-    "vite": "^2.6.4"
+    "vite": "^2.7.12"
   }
 }
