--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "concurrently \"vite\" \"npm run codegen:watch\"",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "server": "vite preview",
     "codegen:watch": "cross-env DOTENV_CONFIG_PATH=./.env.development graphql-codegen --require dotenv/config  --watch --config codegen.yml",
     "codegen": "cross-env DOTENV_CONFIG_PATH=./.env.development graphql-codegen --require dotenv/config --config codegen.yml"
@@ -12,9 +12,9 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@iteria-app/component-templates": "^1.0.1",
-    "@iteria-app/generator": "^1.0.2",
+    "@iteria-app/component-templates": "^1.0.8",
     "@iteria-app/graphql-lowcode": "^0.2.2",
+    "@iteria-app/vite-plugin-lowcode": "^0.1.5",
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.64",
     "@mui/material": "^5.2.7",
