--- a/netlify.toml
+++ b/netlify.toml
@@ -3,3 +3,7 @@
 [build]
   publish = "public"
   command = "npx pnpm i --store=node_modules/.pnpm-store && npx pnpm run build"
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
