feat: netlify.toml changes

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,11 @@
 [build.environment]
   NODE_VERSION = "14"
-[build]
-  publish = "public"
-  command = "npx pnpm i --store=node_modules/.pnpm-store && npx pnpm run build"
+  NPM_FLAGS = "--prefix=/dev/null"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+
+[build]
+  command = "npx pnpm i --store=node_modules/.pnpm-store && npx pnpm run build"
