--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,16 @@
-[build.environment]
-  NODE_VERSION = "14"
-  NPM_FLAGS = "--prefix=/dev/null"
+[[plugins]]
+package = "/plugins/@iteria-netlify-plugin"
 
+# The following redirect is intended for use with most SPAs that handle
+# routing internally.
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
 
-[build]
-  command = "npx pnpm i --store=node_modules/.pnpm-store && npx pnpm run build"
+[[headers]]
+  # Define which paths this specific [[headers]] block will cover.
+  for = "/*"
+    [headers.values]
+    Access-Control-Allow-Origin = "*"
+
