--- a/.stackblitzrc
+++ b/.stackblitzrc
@@ -1,4 +1,3 @@
 {
-  "installDependencies": false,
-  "startCommand": "npm install -g pnpm && pnpm install && pnpm dev",
+  "startCommand": "npm run dev"
 }
