--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@emotion/styled": "^11.3.0",
     "@iteria-app/component-templates": "^1.0.8",
     "@iteria-app/graphql-lowcode": "0.2.3",
-    "@iteria-app/vite-plugin-lowcode": "^0.1.5",
+    "@iteria-app/vite-plugin-lowcode": "0.1.6",
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.64",
     "@mui/material": "^5.2.7",
