--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "history": "^5.2.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "netlify-identity-widget": "^1.9.2",
     "nprogress": "^0.2.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
