--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-helmet": "^6.1.0",
     "react-intl": "^5.24.6",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-refresh": "^0.12.0",
     "react-router": "^6.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^4.0.3",
