--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@emotion/styled": "^11.3.0",
     "@iteria-app/component-templates": "^1.0.8",
     "@iteria-app/graphql-lowcode": "0.2.3",
-    "@iteria-app/vite-plugin-lowcode": "^0.1.5",
+    "@iteria-app/vite-plugin-lowcode": "^0.1.6",
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.64",
     "@mui/material": "^5.2.7",
     "@mui/styles": "^5.2.3",
     "@mui/x-data-grid": "^5.2.2",
+    "@types/netlify-identity-widget": "^1.9.3",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
     "formik": "^2.2.9",
@@ -28,6 +29,7 @@
     "history": "^5.2.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
+    "netlify-identity-widget": "^1.9.2",
     "nprogress": "^0.2.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
