--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@iteria-app/component-templates": "^1.0.8",
+    "@iteria-app/component-templates": "1.0.8",
     "@iteria-app/graphql-lowcode": "0.2.3",
-    "@iteria-app/vite-plugin-lowcode": "^0.1.6",
+    "@iteria-app/vite-plugin-lowcode": "latest",
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.64",
     "@mui/material": "^5.2.7",
     "@mui/styles": "^5.2.3",
     "@mui/x-data-grid": "^5.2.2",
     "@types/netlify-identity-widget": "^1.9.3",
+    "@uppy/aws-s3-multipart": "^2.2.1",
+    "@uppy/core": "^2.1.8",
+    "@uppy/react": "^2.1.2",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
     "formik": "^2.2.9",
