--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "trailingComma": "none",
   "tabWidth": 2,
   "useTabs": false,
+  "semi": false,
   "react/jsx-max-props-per-line": [1, { "when": "always" }]
 }
