--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "scripts": {
     "dev": "concurrently \"vite\" \"npm run codegen:watch\"",
     "build": "vite build",
-    "server": "vite preview",
+    "serve": "vite preview",
     "codegen:watch": "cross-env DOTENV_CONFIG_PATH=./.env.development graphql-codegen --require dotenv/config  --watch --config codegen.yml",
     "codegen": "cross-env DOTENV_CONFIG_PATH=./.env.development graphql-codegen --require dotenv/config --config codegen.yml"
   },
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@iteria-app/component-templates": "^1.0.8",
+    "@iteria-app/component-templates": "1.0.8",
     "@iteria-app/graphql-lowcode": "0.2.3",
     "@iteria-app/vite-plugin-lowcode": "0.1.6",
     "@mui/icons-material": "^5.2.5",
@@ -30,18 +30,16 @@
     "moment": "^2.29.1",
     "nprogress": "^0.2.0",
     "prop-types": "^15.8.1",
-    "react": "^17.0.1",
-    "react-chartjs-2": "^2.11.2",
-    "react-dom": "^16.14.0",
-    "react-feather": "^2.0.9",
+    "react": "^17.0.2",
+    "react-chartjs-2": "^2.10.0",
+    "react-dom": "^17.0.2",
+    "react-feather": "^2.0.8",
     "react-helmet": "^6.1.0",
     "react-intl": "^5.13.2",
     "react-perfect-scrollbar": "^1.5.8",
-    "react-router": "^6.2.1",
-    "react-router-dom": "^6.2.1",
-    "react-scripts": "^4.0.3",
-    "typescript": "4.5.4",
-    "urql": "^2.0.1",
+    "react-router": "^6.0.0-beta.0",
+    "react-router-dom": "6.0.0-beta.8",
+    "urql": "^2.1.3",
     "uuid": "^8.3.2",
     "yup": "^0.29.3"
   },
@@ -53,9 +51,10 @@
     "@graphql-codegen/typescript-urql": "^3.2.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@vitejs/plugin-react": "^1.1.0",
+    "@vitejs/plugin-react": "1.2.0",
     "concurrently": "^6.4.0",
     "cross-env": "^7.0.3",
-    "vite": "^2.7.12"
+    "typescript": "4.5.4",
+    "vite": "2.8.6"
   }
 }
