feat: devReact, missing packages, versionbumps, minor improvements

--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@iteria-app/component-templates": "1.0.8",
-    "@iteria-app/graphql-lowcode": "0.2.3",
+    "@iteria-app/component-templates": "1.1.0",
+    "@iteria-app/component-templates-api": "1.0.1",
+    "@iteria-app/graphql-lowcode": "0.2.6",
     "@iteria-app/vite-plugin-lowcode": "0.1.6",
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.64",
     "@mui/material": "^5.2.7",
     "@mui/styles": "^5.2.3",
     "@mui/x-data-grid": "^5.2.2",
+    "@uppy/aws-s3-multipart": "^2.3.0",
+    "@uppy/core": "^2.2.0",
+    "@uppy/react": "^2.2.0",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
     "formik": "^2.2.9",
@@ -29,6 +33,8 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "nprogress": "^0.2.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^2.10.0",
