--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@iteria-app/component-templates-api": "1.0.1",
     "@iteria-app/graphql-lowcode": "0.2.6",
     "@iteria-app/vite-plugin-lowcode": "0.1.7",
+    "@iteria-app/s3-graphql-client": "^0.0.3",
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.64",
     "@mui/material": "^5.2.7",
