--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@iteria-app/component-templates": "1.1.0",
+    "@iteria-app/component-templates": "1.1.1",
     "@iteria-app/component-templates-api": "1.0.1",
     "@iteria-app/graphql-lowcode": "0.2.6",
     "@iteria-app/vite-plugin-lowcode": "0.1.7",
+    "@iteria-app/s3-graphql-client": "0.0.3",
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.64",
     "@mui/material": "^5.2.7",
@@ -26,6 +27,7 @@
     "@uppy/react": "^2.2.0",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
+    "dotenv": "^16.0.1",
     "formik": "^2.2.9",
     "graphql": "^15.5.0",
     "graphql-tag": "^2.12.4",
