--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@graphql-codegen/typescript": "^2.2.2",
     "@graphql-codegen/typescript-operations": "^2.1.5",
     "@graphql-codegen/typescript-urql": "^3.2.0",
+    "@iteria-app/vite-plugin-lowcode": "^0.1.8",
+    "@rollup/plugin-replace": "^4.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "1.2.0",
