--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,9 @@ package = "/plugins/@iteria-netlify-plugin"
   NPM_FLAGS = "--prefix=/dev/null"
   NODE_OPTIONS = "--max_old_space_size=4096"
 
+[context.production]
+  environment = { NODE_ENV = "development" }
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
