--- a/component-templates/package.json
+++ b/component-templates/package.json
@@ -16,7 +16,7 @@
   "license": "AGPL-3.0-or-later",
   "dependencies": {
     "@iteria-app/component-templates-api": "1.0.1",
-    "@iteria-app/graphql-lowcode": "workspace: *",
+    "@iteria-app/graphql-lowcode": "0.3.3",
     "@iteria-app/s3-graphql-client": "0.0.4",
     "@uppy/aws-s3-multipart": "^2.2.0",
     "@uppy/core": "^2.1.4",
