--- a/netlify.toml
+++ b/netlify.toml
@@ -18,9 +18,9 @@ package = "/plugins/@iteria-netlify-plugin"
     Access-Control-Allow-Origin = "*"
 
 [build]
-  command = "npx pnpm@6.21.0 i --store=node_modules/.pnpm-store && npx pnpm@6.21.0 run build"
+  command = "cd netlify && npx pnpm@6.21.0 i && cd .. && npx pnpm@6.21.0 i --store=node_modules/.pnpm-store && npx pnpm@6.21.0 run build"
   publish = "dist"
-
+  functions ='netlify/functions'
 
   
 
