--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "codegen": "cross-env DOTENV_CONFIG_PATH=./.env.development graphql-codegen --require dotenv/config --config codegen.yml"
   },
   "dependencies": {
+    "@date-io/date-fns": "2.15.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@iteria-app/component-templates": "1.3.4",
+    "@iteria-app/graphql-lowcode": "^0.3.8",
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.64",
     "@mui/material": "^5.2.7",
