--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@date-io/date-fns": "2.15.0",
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
-    "@iteria-app/component-templates": "file:C:/dev/iteria-app-component-templates-1.5.097.tgz",
+    "@iteria-app/component-templates": "1.5.1",
     "@iteria-app/graphql-lowcode": "0.4.2",
     "@mui/icons-material": "^5.2.5",
     "@mui/lab": "^5.0.0-alpha.64",
@@ -42,7 +42,7 @@
     "react-perfect-scrollbar": "^1.5.8",
     "react-router": "^6.0.0-beta.0",
     "react-router-dom": "6.0.0-beta.8",
-    "urql": "^3.0.3",
+    "urql": "^2.1.3",
     "uuid": "^8.3.2",
     "yup": "^0.29.3"
   },
